k8s/stacks/forgejo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: git
  labels:
    app.kubernetes.io/name: git
    app.kubernetes.io/part-of: qtrn-io
